2003-04-14    <dts@axwell>

	* orbsvcs/tests/Notify/RT_lib/RT_POA_Command.h
	  Removed clash with symbol defined in
	  /usr/include/machine/cpu.h on HPUX.

Sun Apr 13 13:25:11 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/IIOP_Profile.h:
	* tao/IIOP_Profile.i:
	* tao/Profile.cpp:
	* tao/Profile.h:
	* tao/Profile.i:
	* tao/Strategies/DIOP_Profile.h:
	* tao/Strategies/DIOP_Profile.i:
	* tao/Strategies/SHMIOP_Profile.h:
	* tao/Strategies/SHMIOP_Profile.i:
	* tao/Strategies/UIOP_Profile.h:
	* tao/Strategies/UIOP_Profile.i:
	* orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.h:
	* orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.i: No idea why
	  virtual functions, accessors for object_key (), were inlined,
	  declared and defined in every protocol. Moved the accessor to
	  the base class and non-virtualized them. 


Sun Apr 13 08:07:48 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/IFRService/tmplinst.cpp: Fixed a compile error
	  in explicit template instantiation builds.

Sun Apr 13 08:03:36 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/Notify/Destroy/main.cpp: Fixed a warning in our
	  daily builds.

Sun Apr 13 07:59:43 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp: Missed a
	  definition of a function.

Sat Apr 12 22:54:38 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Bug_1482_Regression/Makefile:
	* orbsvcs/tests/Security/SecurityLevel1/Makefile:
	* docs/tutorials/Quoter/RT_Event_Service/Makefile: Updated
	  dependencies.

Sat Apr 12 22:50:25 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/examples/ORT/Makefile: Updated dependencies.

Sat Apr 12 22:42:15 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Profile.cpp:
	* tao/Profile.h: 
	* tao/IIOP_Profile.cpp:
	* tao/IIOP_Profile.h:
	* tao/Strategies/DIOP_Profile.cpp:
	* tao/Strategies/DIOP_Profile.h: